<resources>
    <string name="app_name">Yip Yap</string>
    <string name="puppy">Puppy</string>
    <string name="puppers">View Puppers</string>
    <string name="temp">Temporary Navigation</string>
    <string name="take_picture">Take picture</string>
    <string name="upload_from_photo_library">Upload from photo library</string>
    <string name="send">Send</string>
    <string name="DogHint">What\' s on your dog\' s mind?</string>
    <string name="fillLater">TODO</string>
    <string name="settings">Settings</string>
    <string name="make_post">Make Post</string>
    <string name="title_activity_feed2">Feed2</string>
    <string name="add_post">Add Post</string>
    <string name="puppy_post_title">Give your post a title!</string>
    <string name="pupper_description">Describe your puppy!</string>
    <string name="submit_button">Button</string>
    <string name="submit_butt">Submit Post</string>
    <string name="todo">TODO</string>
    <string name="view_puppers">View puppers!</string>
</resources>
