<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.yipyapnewjava.PostActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:layout_width="207dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/puppy"
            android:text="@string/take_picture"
            android:drawable="@drawable/button_selector" android:state_pressed="true"/>

        <Button
            android:layout_width="207dp"
            android:layout_height="wrap_content"
            android:text="@string/upload_from_photo_library"
            android:drawable="@drawable/button_selector" android:state_pressed="true"/>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/fillLater"
            app:srcCompat="@drawable/puppy2" />

        <Button
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:drawable="@drawable/button_selector" android:state_pressed="true"/>

        <Button
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:onClick="launchFeed"
            android:text="@android:string/cancel"
            android:drawable="@drawable/button_selector" android:state_pressed="true"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
