<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.yipyapnewjava.Malone">

    <ImageButton
        android:id="@+id/imageSelect"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_above="@+id/postTitle"
        android:layout_alignEnd="@+id/postTitle"
        android:layout_alignLeft="@+id/postTitle"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/postTitle"
        android:layout_alignStart="@+id/postTitle"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/fillLater"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/add_btn"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <EditText
        android:id="@+id/postTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_outline"
        android:ems="10"
        android:hint="@string/puppy_post_title"
        android:paddingHorizontal="5dp"
        android:paddingVertical="5dp" />

    <EditText
        android:id="@+id/postDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/postTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_outline"
        android:ems="10"
        android:hint="@string/pupper_description"
        android:inputType="textMultiLine"
        android:paddingHorizontal="5dp"
        android:paddingVertical="5dp" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryDark"
        android:text="@string/submit_butt"
        android:textColor="?android:attr/colorBackground" />
</RelativeLayout>
